// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`failureLogger correctly logs Error 1`] = `
Object {
  "category": "NODE_SYSTEM_ERROR",
  "message": "some error message",
  "operation": "someOperation",
  "result": "failure",
}
`;

exports[`failureLogger correctly logs exceptions not described as object 1`] = `
Object {
  "message": "some error message",
  "result": "failure",
}
`;

exports[`failureLogger correctly logs extended Error with status 1`] = `
Object {
  "category": "CUSTOM_ERROR",
  "message": "some error message",
  "result": "failure",
  "status": 500,
}
`;

exports[`failureLogger correctly logs extended Error with status 2`] = `
Object {
  "category": "CUSTOM_ERROR",
  "message": "some error message",
  "result": "failure",
  "status": 500,
}
`;

exports[`failureLogger correctly logs fetch network error 1`] = `
Object {
  "category": "FETCH_NETWORK_ERROR",
  "code": "ENOTFOUND",
  "message": "request to https://unknown/ failed, reason: getaddrinfo ENOTFOUND unknown unknown:443",
  "result": "failure",
}
`;

exports[`failureLogger correctly logs fetch response error with status 1`] = `
Object {
  "category": "FETCH_RESPONSE_ERROR",
  "contentType": "text/plain; charset=utf-8",
  "message": "500 Internal Server Error",
  "result": "failure",
  "status": 500,
}
`;

exports[`failureLogger correctly logs fetch response error with status 2`] = `
Object {
  "category": "FETCH_RESPONSE_ERROR",
  "contentType": "text/plain; charset=utf-8",
  "message": "404 Not Found",
  "result": "failure",
  "status": 404,
}
`;

exports[`failureLogger correctly logs null or undefined input 1`] = `
Object {
  "action": "someAction",
  "operation": "someOperation",
  "result": "failure",
}
`;

exports[`failureLogger correctly logs plain object with status 1`] = `
Object {
  "category": "CUSTOM_ERROR",
  "message": "some message to describe the case",
  "result": "failure",
  "status": 500,
}
`;

exports[`failureLogger correctly logs plain object with status 2`] = `
Object {
  "category": "CUSTOM_ERROR",
  "message": "some message to describe the case",
  "result": "failure",
  "status": 404,
}
`;
